# registry-api

./: .envrc  .flake8  .gitignore  DEFENSIVE_MIGRATION_PLAN.md  DEVELOPMENT.md  DOCUMENTATION.md  Dockerfile.lambda  Dockerfile.router  PRODUCTION_ISSUES_ANALYSIS.md  README.md  SERVICE_REGISTRY_IMPLEMENTATION.md  SUBSCRIPTION_FIX_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  XRAY_DEPLOYMENT_GUIDE.md  XRAY_IMPLEMENTATION_SUMMARY.md  analyze_production_risks.py  analyze_standardization_issues.py  analyze_systemic_issues.py  apply_standardized_components.py  cleanup_duplicate_subscriptions.py  conftest.py  database_health_check.py  debug_auth.py  debug_enum_function.py  debug_person_model.py  debug_person_update_production.py  demo_error_handling.py  devbox.json  diagnostic_repository_pattern.py  field_standardization_report_20250815_125105.json  field_standardization_report_20250815_125831.json  fix_failing_tests.py  fix_production_risks.py  justfile  main.py  main_versioned.py  organize_repo_structure.py  password_field_diagnosis_20250815_122336.json  people_table_backup_20250815_125830.json  production_risks.json  (+37 more)
.codecatalyst/: README.md
.githooks/: pre-commit  pre-push
deployment-package/: main.py
docs/: API_DOCUMENTATION.md  API_WORKFLOW_IMPROVEMENTS.md  EMAIL_TEST_MODE.md  FLAKE8_IMPROVEMENTS.md  PR_TEMPLATE.md  README.md  SUBSCRIPTION_EMAIL_NOTIFICATIONS.md  TASK8_IMPLEMENTATION_SUMMARY.md  TEST_FIXES_SUMMARY.md  WORKFLOW_IMPROVEMENTS_SUMMARY.md
migration_backup/: migration_log_20250811_154450.txt
scripts/: README.md  analyze_cascade_deletion_simple.py  api-frontend-compatibility-test.js  assign_super_admin_role.py  check_tables.py  check_user.py  cleanup_test_users.py  create_admin_user.py  create_roles_tables.py  debug-api-responses.js  debug-person-update-issue.py  debug_auth.py  debug_password.py  debug_password_hash_issue.py  debug_user_count.py  deployment_test_summary.py  diagnose_admin.py  diagnose_admin_login.py  diagnose_deployed_api.py  diagnose_password_field_consistency.py  fix-critical-api-issues.py  fix_admin_password_exact.py  fix_admin_user.py  fix_cascade_deletion_simple.py  fix_imports_properly.py  fix_skipped_tests.py  fix_test_imports.py  frontend-compatibility-patch.js  generate_password_hash.py  investigate_auth_issue.py  list_users.py  migrate_admin_roles.py  monitor-deployment-and-test.py  monitor_deployment.py  pre-commit-check.sh  request_ses_production.py  run_tests_no_emails.sh  set_initial_admin.py  setup-git-hooks.sh  simple_admin_migration.py  (+22 more)
src/: __init__.py  app.py
tests/: README_TASK18.md  README_VERSIONED_API_TESTS.md  __init__.py  conftest.py  modernize_legacy_tests.py  test_account_locked_until_fix.py  test_address_field_standardization.py  test_address_fix_verification.py  test_address_none_fix.py  test_admin_account_unlock.py  test_admin_endpoint_direct.py  test_admin_fallback.py  test_admin_login_final.py  test_admin_middleware.py  test_admin_performance_endpoints.py  test_admin_service.py  test_all_update_inconsistencies.py  test_api_documentation_and_formatting.py  test_async_correctness.py  test_async_correctness.py.disabled  test_async_correctness_broken.py  test_async_correctness_comprehensive.py  test_async_sync_validation.py  test_auth_endpoints.py  test_auth_integration_simple.py  test_database.py  (+128 more)
(+167 files in other folders)
