[project]
name = "registry-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.1.3",
    "boto3==1.34.144",
    "botocore==1.34.144",
    "fastapi==0.111.0",
    "mangum==0.17.0",
    "moto==5.0.9",
    "pydantic==2.10.3",
    "pyjwt==2.8.0",
    "pytest==8.2.2",
    "pytest-mock==3.14.0",
    "python-json-logger==2.0.7",
    "python-multipart>=0.0.7",
]

[dependency-groups]
dev = [
    "fastapi>=0.111.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "pytest>=8.2.2",
    "pytest-asyncio>=1.1.0",
    "pyyaml>=6.0.2",
]
