[project]
name = "registry-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aws-xray-sdk>=2.14.0",
    "bcrypt==4.1.3",
    "boto3==1.34.144",
    "botocore==1.34.144",
    "fastapi==0.111.0",
    "mangum==0.17.0",
    "moto==5.0.9",
    "pydantic==2.10.3",
    "pyjwt==2.8.0",
    "pytest==8.2.2",
    "pytest-mock==3.14.0",
    "python-json-logger==2.0.7",
    "python-multipart>=0.0.7",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fastapi>=0.111.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=1.1.0",
    "pyyaml>=6.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
